# retro-asteroids

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build_unix.sh
.github/workflows/: build.yml
Assets/Polygons/: fire_particle.txt  player_spaceship.txt  player_spaceship_projectile.txt
Assets/font_48/: font_48.fnt  font_48.sbf
Cmake/: CompileOptions.cmake
Source/: CMakeLists.txt
Source/Asset/: FontAtlas.cpp  FontAtlas.hpp  ImageLoader.cpp  ImageLoader.hpp  PolygonLoader.cpp  PolygonLoader.hpp
Source/ECS/: Entity.hpp  System.hpp  World.cpp  World.hpp
Source/ECS/detail/: Component.cpp  Component.hpp  ComponentArray.cpp  ComponentArray.hpp
Source/Game/: Components.hpp  DeferQueue.cpp  DeferQueue.hpp  Game.cpp  Game.hpp  Prefabs.cpp  Prefabs.hpp  RenderSystems.hpp  StarBackground.cpp  StarBackground.hpp  UpdateSystems.hpp
Source/Input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Source/JobSystem/: Executor.cpp  Executor.hpp
Source/Math/: Mat3.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Source/Render/: Color.hpp  Image.hpp  ImageView.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Polygon.hpp  Renderer.cpp  Renderer.hpp
Source/Template/: Engine.cpp  Engine.h  Game.cpp
Source/Utils/: Assert.hpp  BlockingQueue.hpp  Log.hpp  Random.cpp  Random.hpp  StringLiteral.hpp  TypeSafeBitmask.hpp  TypeSafeId.hpp
